# kindle_notebook_pdf_converter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  nbk_convert.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.cmd
docs/: architecture.md  installation.md  usage.md
