[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kindle-notebook-converter"
version = "1.0.0"
description = "Convert Kindle Scribe handwritten notebooks to PDF with vector rendering"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{name = "Your Name", email = "your.email@example.com"}]
keywords = ["kindle", "scribe", "notebook", "pdf", "converter", "ebook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Multimedia",
    "Topic :: Utilities",
]

dependencies = [
    "reportlab>=4.0.0",
    "pypdf>=3.0.0",
    "lxml>=4.9.0",
    "Pillow>=9.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "pylint>=2.15.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/downloader"
Documentation = "https://github.com/yourusername/downloader/tree/main/docs"
Repository = "https://github.com/yourusername/downloader"
Issues = "https://github.com/yourusername/downloader/issues"

[project.scripts]
nbk-convert = "kindle_notebook_pdf_converter.nbk_convert:main"

[tool.setuptools]
packages = ["kindle_notebook_pdf_converter"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true

[tool.pylint.messages_control]
disable = [
    "C0330", "C0326",  # Bad whitespace
    "R0913",            # Too many arguments
    "R0914",            # Too many local variables
]

[tool.pylint.format]
max-line-length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "kfxlib.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["kindle_notebook_pdf_converter"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/*.pyc",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
